[package]
name = "dllx"
version = "0.1.0"
edition = "2021"

authors = ["James Yacoube <jamesyacoube@yahoo.com>"]
description = "Cross platform dynamic linking libraries"
license = "AGPL v3.0"
readme = "README.md"
repository = "https://github.com/OrtheSnowJames/dllx"

[dependencies]
zip = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"
